--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -175,7 +175,7 @@ a:hover #work-mobile {
 #about {
   /* background-color: #282828; */
   height: auto;
-  padding: 5em 0;
+  padding: 6em 0;
   /* margin: 0 0 1.5em 0; */
   /* height: 300px; */
   background-color: #222222;
@@ -230,7 +230,8 @@ a:hover #work-mobile {
     visibility: hidden;
   }
   .work-card {
-    background-position: right -30px bottom;
+    background-position: right -90px bottom;
+    background-size: auto;
   }
 }
 
