--- a/assets/css/works.css
+++ b/assets/css/works.css
@@ -1621,6 +1621,9 @@
 		html, body {
 			min-width: 320px;
 		}
+		h1 br {
+			content: ' ';
+		}
 	}
 	@media screen and (max-width: 720px) {
 	h3 br {
@@ -3872,7 +3875,8 @@
 		@media screen and (max-width: 480px) {
 
 			#wrapper {
-				max-width: calc(100% - 2em);
+				width: 100%;
+				/* max-width: calc(100% - 2em); */
 			}
 
 		}
