--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -211,7 +211,7 @@ a:hover #work-mobile {
 
 @media (max-width: 768px) {
   #landing {
-    padding: 5em 0 0 2em;
+    padding: 5em 0 0 1em;
     margin: 0;
     position: inherit;
   }
@@ -221,17 +221,23 @@ a:hover #work-mobile {
   .work-card {
     margin-bottom: 1em;
   }
+  h2 {
+    margin-left: 1em;
+  }
   h3 {
     max-width: 50%;
     font-size: 0.95em;
-    margin-left: 3.16em;
+    margin-left: 2.1em;
   }
   .ver_down, h1 span {
     visibility: hidden;
   }
   .work-card {
-    background-position: right -90px bottom;
+    background-position: right -60px bottom;
     background-size: auto;
+  }
+  #about p {
+    margin: 0 2em;
   }
 }
 
