--- a/assets/css/font.css
+++ b/assets/css/font.css
@@ -10,6 +10,13 @@
 
 @font-face {
   font-family: 'DIN';
+  font-weight: 200;
+  font-style: italic;
+  src: url(../fonts/DIN-LightItalicAlt.otf) format("opentype")
+}
+
+@font-face {
+  font-family: 'DIN';
   font-weight: 400;
   font-style: normal;
   src: url(../fonts/DINWeb.eot), url(../fonts/DINWeb.eot#iefix) format("embedded-opentype"), url(../fonts/DINWeb.woff) format("woff")
