--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,7 +1,7 @@
 /* -------- General -------- */
 
 * {
-  color: #999999;
+  color: #666666;
   -webkit-font-smoothing: antialiased;
   margin: 0;
   padding: 0;
@@ -12,12 +12,12 @@ body {
   width: 100%;
   padding: 0px;
   margin: 0px;
-  background-image: url("../../images/noise.jpg");
-  background-repeat: repeat;
-  background-attachment: fixed;
+  /* background-image: url("../../images/noise.jpg"); */
+  /* background-repeat: repeat; */
+  /* background-attachment: fixed; */
   overflow-y: auto;
   overflow-x: hidden;
-  background-color: #000;
+  background-color: #fff;
 }
 
 a {
@@ -32,44 +32,47 @@ a {
 }
 
 a:hover {
-  color: #ffffff;
+  color: #FB973A;
   text-decoration: none;
 }
 
 p {
-  font-size: 0.9em;
+  font-size: 0.8em;
   overflow-wrap: break-word;
   line-height: 1.6em;
 }
 
-
 /* -------- Text -------- */
 
 /* Alejandro */
+
 h1 {
   font-family: 'DIN', Helvetica, sans-serif;
   font-weight: 600;
   letter-spacing: -0.025em;
   line-height: 1.5em;
   margin-bottom: 1.5em;
-  font-size: 2em;
-  margin-left: -0.55em;
-  color: #ffffff;
+  font-size: 1.5em;
+  margin-left: -0.3em;
+  color: #333;
 }
 
-h1 span{
+h1 span {
   color: #333333;
 }
 
 /* Work Name */
+
 h2 {
   letter-spacing: 0px;
   text-align: left;
-  margin: 0 0 0.3em 1.5em;
-  color: #eeeeee;
-  font-size: 2em;
-  font-weight: 400;
-  line-height: 20px;
+  padding-top: 0.4em;
+  color: #333;
+  font-size: 5em;
+  font-weight: 200;
+  font-style: italic;
+  line-height: 0.98em;
+  display: inline-block;
 }
 
 h2 span {
@@ -77,64 +80,66 @@ h2 span {
 }
 
 /* Work Description */
+
 h3 {
   letter-spacing: 0px;
-  margin-left: 3em;
+  /* margin-left: 3em; */
   margin-top: 1em;
   color: #999999;
-  font-size: 1em;
+  font-size: 0.8em;
   line-height: 1.5em;
   font-weight: 400;
   text-align: left;
   max-width: 55%;
+  /* display: none; */
 }
+
 h3 span {
   display: inline-block;
 }
-
 
 /* -------- Container -------- */
 
 #landing {
   position: fixed;
-	padding: 5em 0 0 5em;
+  padding: 6em 0 0 2em;
   z-index: 100;
   height: 100%;
-  min-height: 420px;
+  /* min-height: 420px; */
 }
 
-#works {
-  padding: 5em 5em 0 0;
-  background-image: url("../../images/noise.jpg");
-  background-repeat: repeat;
-  background-attachment: fixed;
+#self-intro {
+  padding-top: 6em;
+  margin-bottom: 40vh;
 }
 
-.work-card {
-  margin: 0 0 1.5em 0;
-  height: 300px;
-  background-color: #222222;
-  color: #4a4a4a;
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: right bottom;
-  /* border-bottom: 4px solid #eeeeee; */
+.card {
+  background-color: transparent;
+  border: 0;
+}
+.card-header {
+  padding: 0;
+  background-color: transparent;
+  border: 0;
 }
 
-.work-card:hover {
-  background-color: #2B2B2B;
- }
+.card-body {
+  padding: 1em 3em 1em 0;
+  margin-left: 3em;
+  margin-bottom: 2em;
+  /* background-color: #E5E5E5; */
+}
 
 
-/* -------- Specific Works -------- */
+/* -------- Decoration -------- */
 
 #work-mobile {
-  background-image: url("../../images/mobile_nav.png");
+  /* background-image: url("../../images/mobile_nav.png"); */
   /* border-bottom: 4px solid #222222; */
 }
 
 a:hover #work-mobile {
-  background-image: url("../../images/mobile_nav.png");
+  /* background-image: url("../../images/mobile_nav.png"); */
   /* background-color: #091329; */
   /* border 2px solid linear-gradient(to right, #278797 10%, #012AFB 95%); */
   /* box-shadow: 0px 3px #0160C6; */
@@ -142,58 +147,82 @@ a:hover #work-mobile {
 }
 
 #work-smartpill {
-  background-image: url("../../images/smartpill_nav.png");
+  /* background-image: url("../../images/smartpill_nav.png"); */
 }
 
 #work-inneref {
-  background-image: url("../../images/inneref_nav.png");
+  /* background-image: url("../../images/inneref_nav.png"); */
 }
 
 #work-inforest {
-  background-image: url("../../images/inforest_nav.png");
+  /* background-image: url("../../images/inforest_nav.png"); */
 }
 
-
-.ver_center {
-  position: relative;
-  top: 50%;
-  transform: translateY(-50%);
-}
-
-.ver_down {
+#decoration_down {
   position: fixed;
   bottom: 0;
 }
 
-.hor_right {
-  margin-right:-0.05em;
+.background {
+  width: calc((100vw - 4em - 30px)*3/4);
+  height: calc(100vh - 4em);
+  position: fixed;
+  left: calc(2em + 15px);
+  bottom: 0;
+  background-image: url("../../images/blank-banner.png");
+  background-color: #F4F4F2;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: contain;
+  display: none;
+  transition: background 0.2s linear;
+}
+
+.word-covered {
+  position: relative;
+  white-space: nowrap;
+}
+
+.word-covered:before  {
+  bottom: 10%;
+  content: '';
+  height: 30%;
+  left: 0;
+  opacity: .9;
+  position: absolute;
+  right: 0;
+  background: #FB973A;
+}
+
+.word-highlighted {
+  position: relative;
+  white-space: pre-line;
+}
+
+.word-highlighted:before  {
+  bottom: 0%;
+  content: '';
+  height: 20px;
+  left: 0;
+  opacity: .4;
+  position: absolute;
+  right: 0;
+  background: #FB973A;
+  transition: background 0.2s linear;
 }
 
 
-/* -------- About -------- */
-
-#about {
-  /* background-color: #282828; */
-  height: auto;
-  padding: 6em 0;
-  /* margin: 0 0 1.5em 0; */
-  /* height: 300px; */
-  background-color: #222222;
-  color: #4a4a4a;
+.word-colored-orange {
+  color: #FB973A;
 }
 
-#about p {
-  margin: 0 3em;
-  color: #999;
-  font-size: 1em;
-  line-height: 1.5em;
-  padding-bottom: 3em;
-  text-align: left;
-  font-weight: normal;
-}
+
+
+/* -------- Footer -------- */
 
 #footer-p {
   height: 100px;
+  margin-top: 30vh;
 }
 
 #footer-p p {
@@ -218,31 +247,48 @@ a:hover #work-mobile {
   #works {
     padding: 0;
   }
+  #self-intro {
+    margin: 0 0 30vh 3em;
+    padding-top: 2em;
+  }
   .work-card {
     margin-bottom: 1em;
   }
+
+  .card-body {
+    margin-left: 6em;
+  }
+
+  h1 {
+    margin-bottom: 0;
+  }
   h2 {
-    margin-left: 1em;
+    margin-left: 1.2em;
+    font-size: 3em;
   }
-  h3 {
-    max-width: 50%;
-    font-size: 0.95em;
-    margin-left: 2.1em;
+  p {
+    color: #333333;
+
   }
-  .ver_down, h1 span {
+  .background {
+    width: calc(100% - 1em - 15px);
+    height: 100%;
+    left: calc(1em + 15px);
+    opacity: 0.3;
+  }
+  .decoration_down {
     visibility: hidden;
   }
-  .work-card {
-    background-position: right -60px bottom;
-    background-size: auto;
+  #worklist {
+
   }
-  #about p {
-    margin: 0 2em;
+  #footer-p {
+    margin-left: 3em;
   }
 }
 
 @media (min-width: 1200px) {
   .work-card {
-    height: 300px;
+    /* height: 300px; */
   }
 }
