New project EDGE updated. Fix the jQuery event on iOS.
The bootstap collapes is not working in the previous version. Use cursor: point to quickly solve it.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -73,6 +73,7 @@ h2 {
   font-style: italic;
   line-height: 0.98em;
   display: inline-block;
+  cursor: pointer;
 }
 
 h2 span {
@@ -130,6 +131,10 @@ h3 span {
   /* background-color: #E5E5E5; */
 }
 
+.upcoming {
+  text-decoration: line-through;
+  color: #999;
+}
 
 /* -------- Decoration -------- */
 
