--- a/assets/css/preloader.css
+++ b/assets/css/preloader.css
@@ -4,7 +4,7 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background: #000;
+  background: #fff;
   z-index: 800;
   height: 100%;
   width: 100%;
@@ -24,7 +24,7 @@
   margin-left: -30px;
   margin-top: -30px;
   padding: 0;
-  background-color: #CCC;
+  background-color: #999;
   border-radius: 100%;
   -webkit-animation: sk-scaleout 1.0s infinite ease-in-out;
   animation: sk-scaleout 1.0s infinite ease-in-out;
