--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -221,6 +221,25 @@ a:hover #work-mobile {
   color: #FB973A;
 }
 
+.btn-primary {
+  /* border: solid 2px #FB973A; */
+  background-color: #FB973A;
+  opacity: 0.7;
+  border: 0;
+  /* height: 38px; */
+  border-radius: 0;
+  text-decoration: none;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+.btn-primary:hover, .btn-primary:active {
+  background-color: #FB973A;
+  opacity: 1;
+  border: 0;
+  color: #ffffff;
+}
+
 
 
 /* -------- Footer -------- */
