--- a/assets/css/works.css
+++ b/assets/css/works.css
@@ -29,8 +29,9 @@ a:hover {
   text-decoration: none;
 }
 
-p {
+p, li{
   color: #666666;
+  list-style-type: none;
   font-size: 0.9em;
   overflow-wrap: break-word;
   line-height: 1.6em;
@@ -95,7 +96,79 @@ h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
   color: black;
 }
 
+
+
+/* -------- Video & Image -------- */
+
+	.video {
+		z-index: 10;
+	}
+
+	.video-mockup1 {
+		width:60.7%;
+		left:50%;
+		top:50%;
+		z-index:1000;
+		transform:translate(-50%,-50%);
+		position:absolute;
+	}
+
+		.image.alt {
+			display: block;
+			margin: 2em 0 -1.3em 0;
+			border-left: 2em solid rgba(0,0,0,0);
+			width: 100%;
+			z-index: 10;
+		}
+
+			.image.alt img {
+				width: 100%;
+				border-radius: 4px;
+
+			}
+
+		.image.main {
+			display: block;
+			margin: -2em 0 0 0;
+			width: 100%;
+		}
+
+			.image.main img {
+				width: 100%;
+
+			}
+
+		.image.full {
+			display: block;
+			margin: 0 0 2em 0;
+			width: 100%;
+		}
+
+					.image.full img {
+						width: 100%;
+					}
+
+		.image.end {
+			display: block;
+			margin: 0 0 -3em 0;
+			width: 100%;
+		}
+
+					.image.end img {
+						width: 100%;
+					}
+
 /* -------- Container Positioning -------- */
+
+#main > section {
+  padding: 5em 5em 3em 5em ;
+  border-top: solid 1px #dddddd;
+}
+
+  #main > section:first-child {
+    border-top: 0;
+  }
+
 
 .float-left {
   float: left;
@@ -133,6 +206,9 @@ header {
   left: 1.8em;
   position: absolute;
 }
+
+
+/* -------- Nav -------- */
 
 nav {
   box-sizing: border-box;
@@ -204,25 +280,9 @@ nav ul {
 						box-shadow: none;
 					}
 
-/* -------- Card Rewrite -------- */
+/* -------- Info -------- */
 
-.card {
-  background-color: transparent;
-  border: 0;
-}
 
-.card-header {
-  padding: 0;
-  background-color: transparent;
-  border: 0;
-}
-
-.card-body {
-  padding: 1em 3em 1em 0;
-  margin-left: 3em;
-  margin-bottom: 2em;
-  /* background-color: #E5E5E5; */
-}
 
 /* -------- Button Rewrite -------- */
 
@@ -247,10 +307,14 @@ nav ul {
 
 /* -------- Decoration -------- */
 
-.upcoming {
-  text-decoration: line-through;
-  color: #999;
+hr {
+  border: 0;
+  max-width: 14px;
+  border-bottom: solid 2px;
+  margin: 4em 0 3em -14px;
 }
+
+
 
 .background {
   width: calc((100vw - 4em - 30px)*3/4);
@@ -316,7 +380,7 @@ nav ul {
 }
 
 .inforest {
-  background-color: #eeeeee !important;
+  /* background-color: #eeeeee !important; */
 }
 
 .mobile, .civicrm {
@@ -331,14 +395,46 @@ nav ul {
 /* -------- Footer -------- */
 
 #footer {
-  margin: 30vh 0 2.25em 0;
+  display: -moz-flex;
+  display: -webkit-flex;
+  display: -ms-flex;
+  display: flex;
+  -moz-flex-wrap: wrap;
+  -webkit-flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  /* padding: 5em 12em 3em 12em ; */
+  /* width: calc(100% + 2em); */
+  /* margin: 0 0 3em 0; */
 }
 
-#footer p {
-  color: #aaaaaa;
-  letter-spacing: 1px;
-  font-size: 0.75em;
-}
+  #footer > .links a {
+    font-family: 'DIN';
+    font-style: italic;
+    font-weight: 200;
+    font-size: 2.5em;
+  }
+
+
+  #footer > * {
+    width: 50%;
+    /* width: calc(50% - 2em); */
+    /* margin-left: 2em; */
+  }
+
+  #footer .copyright {
+    width: 100%;
+    /* margin: 2.5em 0 2em 0; */
+    font-size: 0.5em;
+    text-align: right;
+    color: #ccc;
+  }
+
+  #footer .right {
+    text-align: right;
+    float: right;
+  }
+
 
 /* -------- Mobile View Media -------- */
 
