--- a/assets/css/works.css
+++ b/assets/css/works.css
@@ -29,7 +29,11 @@ a:hover {
   text-decoration: none;
 }
 
-p, li{
+a sup{
+  color: #999999;
+}
+
+p, li {
   color: #666666;
   list-style-type: none;
   font-size: 0.9em;
@@ -46,7 +50,9 @@ h1 {
   font-size: 1.5em;
   margin-left: -0.3em;
   color: #444444;
-} /* _ alejandro.wang */
+}
+
+/* _ alejandro.wang */
 
 h2 {
   font-size: 4em;
@@ -71,7 +77,6 @@ h4 {
   font-style: italic;
   font-weight: 200;
   margin: 0 0 3.5em 0;
-  font-weight: 600;
   line-height: 1.6;
   letter-spacing: -0.02em;
   color: #222222;
@@ -79,7 +84,6 @@ h4 {
 
 h5 {
   font-size: 1.5em;
-  /* font-weight: 600; */
   margin-bottom: 1em;
   z-index: 1000;
   position: relative;
@@ -92,83 +96,119 @@ h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
   text-decoration: none;
 }
 
-.slogan p {
-  color: black;
-}
-
 
 
 /* -------- Video & Image -------- */
+.iframe-container {
+  position: relative;
+  width: 100%;
+  height: 0;
+  padding-bottom: 56.25%;
+}
 
-	.video {
-		z-index: 10;
-	}
+.iframe-video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
 
-	.video-mockup1 {
-		width:60.7%;
-		left:50%;
-		top:50%;
-		z-index:1000;
-		transform:translate(-50%,-50%);
-		position:absolute;
-	}
+.video {
+  z-index: 10;
+}
 
-		.image.alt {
-			display: block;
-			margin: 2em 0 -1.3em 0;
-			border-left: 2em solid rgba(0,0,0,0);
-			width: 100%;
-			z-index: 10;
-		}
+.video-mockup1 {
+  width: 60.7%;
+  left: 50%;
+  top: 50%;
+  z-index: 1000;
+  transform: translate(-50%, -50%);
+  position: absolute;
+}
 
-			.image.alt img {
-				width: 100%;
-				border-radius: 4px;
+.image {
+  display: block;
+}
 
-			}
+.image img {
+  width: 100%;
+}
 
-		.image.main {
-			display: block;
-			margin: -2em 0 0 0;
-			width: 100%;
-		}
+/* Banner picture in header */
+.image.banner {
+  width: calc(100% - 5em);
+  height: calc(100vh - 8em);
+  margin: 3.5em 2.5em 0 2.5em;
+  position: absolute;
+}
 
-			.image.main img {
-				width: 100%;
+.image.banner img {
+  height: 100%;
+  object-fit: cover;
+}
 
-			}
+.image.alt {
+  display: block;
+  margin: 2em 0 -1.3em 0;
+  border-left: 2em solid rgba(0, 0, 0, 0);
+  width: 100%;
+  z-index: 10;
+}
 
-		.image.full {
-			display: block;
-			margin: 0 0 2em 0;
-			width: 100%;
-		}
+.image.alt img {
+  border-radius: 4px;
+}
 
-					.image.full img {
-						width: 100%;
-					}
+.image.main {
+  margin: -2em 0 0 0;
+  width: 100%;
+}
 
-		.image.end {
-			display: block;
-			margin: 0 0 -3em 0;
-			width: 100%;
-		}
+.image.full {
+  display: block;
+  margin: 0 0 2em 0;
+  width: 100%;
+}
 
-					.image.end img {
-						width: 100%;
-					}
+.image.end {
+  display: block;
+  margin: 0 0 -3em 0;
+  width: 100%;
+}
+
 
 /* -------- Container Positioning -------- */
 
-#main > section {
-  padding: 5em 5em 3em 5em ;
-  border-top: solid 1px #dddddd;
+.container-fluid {
+  padding: 0;
 }
 
-  #main > section:first-child {
-    border-top: 0;
-  }
+/* -------- Header -------- */
 
+header {
+  width: 100%;
+  height: calc(100vh - 4.5em);
+  margin-bottom: 1.5em;
+}
+
+.slogan {
+  bottom: 1.8em;
+  left: 2.5em;
+  position: absolute;
+  z-index: 100;
+}
+
+.slogan p {
+  color: black;
+  margin-bottom: 0;
+}
+
+.nav-desc {
+  height: 1.5em;
+  margin: 0 2.5em;
+  vertical-align: middle;
+}
 
 .float-left {
   float: left;
@@ -184,55 +224,40 @@ h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
   margin: 0;
 }
 
-.container-fluid {
-  padding: 0;
+#main>section {
+  padding: 5em 5em 3em 5em;
+  border-bottom: solid 1px #dddddd;
 }
 
-header {
-  box-sizing: border-box;
-  width: calc(100% - 5em);
-  height: calc(100vh - 7em);
-  margin: 3.5em auto 0 auto;
-  position: relative;
-  background-color: #dddddd;
-  /* background-image: url("../../inforest/images/header.png"); */
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
+#main>section:first-child {
+  border-top: 0;
 }
-
-.slogan {
-  bottom: 0.5em;
-  left: 1.8em;
-  position: absolute;
-}
-
 
 /* -------- Nav -------- */
 
 nav {
   box-sizing: border-box;
-  height: 4.5em;
-  position: relative;
   width: 100%;
-  padding: 0.5em calc(3em + 4px);
-  margin: 0;
-  /* background-color: #f4f4f2; */
+  height: 3em;
+  padding: 0 2.5em;
+  border-bottom: solid 1px #dddddd;
   cursor: default;
-  text-align: left;
-  -moz-transition: background-color 0.2s ease, border-top-left-radius 0.2s ease, border-top-right-radius 0.2s ease, padding 0.2s ease;
-  -webkit-transition: background-color 0.2s ease, border-top-left-radius 0.2s ease, border-top-right-radius 0.2s ease, padding 0.2s ease;
-  -ms-transition: background-color 0.2s ease, border-top-left-radius 0.2s ease, border-top-right-radius 0.2s ease, padding 0.2s ease;
-  transition: background-color 0.2s ease, border-top-left-radius 0.2s ease, border-top-right-radius 0.2s ease, padding 0.2s ease;
+  -moz-transition: all 0.2s ease;
+  -webkit-transition: all 0.2s ease;
+  -ms-transition: all 0.2s ease;
+  transition: all 0.2s ease;
+  z-index: 1000;
 }
 
-.nav-desc {
-  height: 1.5em;
+.nav-home {
+  vertical-align: middle;
+  line-height: 3em;
 }
 
 .nav-tab {
-  height: 2em;
-  clear: both;
+  vertical-align: middle;
+  line-height: 3em;
+  right: 0;
 }
 
 nav p {
@@ -240,48 +265,49 @@ nav p {
 }
 
 nav ul {
-			margin: 0;
-			padding: 0;
-			list-style: none;
-      float: right;
-		}
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  float: right;
+}
 
-			nav ul li {
-				-moz-transition: margin 0.2s ease;
-				-webkit-transition: margin 0.2s ease;
-				-ms-transition: margin 0.2s ease;
-				transition: margin 0.2s ease;
-				display: inline-block;
-				margin: 0 0.35em;
-				padding: 0;
-				vertical-align: middle;
-			}
+nav ul li {
+  display: inline-block;
+  vertical-align: middle;
+}
 
-				nav ul li a {
-					-moz-transition: font-size 0.2s ease;
-					-webkit-transition: font-size 0.2s ease;
-					-ms-transition: font-size 0.2s ease;
-					transition: font-size 0.2s ease;
-					display: inline-block;
-					height: 2.25em;
-					line-height: 2.25em;
-					padding: 0 1.25em;
-					border: 0;
-					border-radius: 8px;
-					box-shadow: inset 0 0 0 1px transparent;
-				}
+nav ul li a {
+  font-weight: 600;
+  line-height: 1em;
+  display: inline-block;
+  padding: 0 1.25em;
+  border-right: 2px solid #cccccc;
+  border-bottom: 0;
+  -moz-transition: color 0.2s ease;
+  -webkit-transition: color 0.2s ease;
+  -ms-transition: color 0.2s ease;
+  transition: color 0.2s ease;
+}
 
-					nav ul li a:hover {
-						background-color: rgba(222, 222, 222, 0.25);
-					}
+nav ul li:last-child a{
+  padding-right: 0;
+  border: 0;
+}
 
-					nav ul li a.active {
-						background-color: #ffffff;
-						box-shadow: none;
-					}
+nav ul li a:hover {
+  color: black;
+}
+
+nav ul li a.active {
+  color: black;
+}
+
+.sticky {
+  position: fixed;
+  top: 0;
+}
 
 /* -------- Info -------- */
-
 
 
 /* -------- Button Rewrite -------- */
@@ -313,8 +339,6 @@ hr {
   border-bottom: solid 2px;
   margin: 4em 0 3em -14px;
 }
-
-
 
 .background {
   width: calc((100vw - 4em - 30px)*3/4);
@@ -364,7 +388,6 @@ hr {
   transition: background 0.2s linear;
 }
 
-
 /* -------- Theme -------- */
 
 .smartpill {
@@ -391,49 +414,30 @@ hr {
   background-color: #E7F0F8 !important;
 }
 
-
 /* -------- Footer -------- */
 
 #footer {
-  display: -moz-flex;
-  display: -webkit-flex;
-  display: -ms-flex;
-  display: flex;
-  -moz-flex-wrap: wrap;
-  -webkit-flex-wrap: wrap;
-  -ms-flex-wrap: wrap;
-  flex-wrap: wrap;
-  /* padding: 5em 12em 3em 12em ; */
-  /* width: calc(100% + 2em); */
-  /* margin: 0 0 3em 0; */
+  padding: 5em ;
+  margin-top: 5em;
 }
 
-  #footer > .links a {
-    font-family: 'DIN';
-    font-style: italic;
-    font-weight: 200;
-    font-size: 2.5em;
-  }
+#footer>* {
+  width: 60%;
+}
 
+#footer>.links a {
+  font-style: italic;
+  font-weight: 200;
+  font-size: 2.5em;
+  line-height: 1.5em;
+  display: inline-block;
+  margin-right: 0.2em;
+}
 
-  #footer > * {
-    width: 50%;
-    /* width: calc(50% - 2em); */
-    /* margin-left: 2em; */
-  }
-
-  #footer .copyright {
-    width: 100%;
-    /* margin: 2.5em 0 2em 0; */
-    font-size: 0.5em;
-    text-align: right;
-    color: #ccc;
-  }
-
-  #footer .right {
-    text-align: right;
-    float: right;
-  }
+#footer .copyright {
+  font-size: 0.8em;
+  color: #ccc;
+}
 
 
 /* -------- Mobile View Media -------- */
