--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3,32 +3,25 @@
 * {
   color: #333333;
   -webkit-font-smoothing: antialiased;
-  margin: 0;
-  padding: 0;
-  font-family: 'DIN', Helvetica, sans-serif;
 }
 
 body {
-  width: 100%;
   padding: 0px;
   margin: 0px;
-  /* background-image: url("../../images/noise.jpg"); */
-  /* background-repeat: repeat; */
-  /* background-attachment: fixed; */
   overflow-y: auto;
   overflow-x: hidden;
-  background-color: #fff;
+  background-color: #ffffff;
 }
 
 a {
   color: #999999;
   text-decoration: none;
   border-bottom: dotted 1px;
-  -webkit-transition: color 0.2s;
-  -moz-transition: color 0.2s;
-  -ms-transition: color 0.2s;
-  -o-transition: color 0.2s;
-  transition: color 0.2s;
+  -webkit-transition: color 0.3s;
+  -moz-transition: color 0.3s;
+  -ms-transition: color 0.3s;
+  -o-transition: color 0.3s;
+  transition: color 0.3s;
 }
 
 a:hover {
@@ -37,86 +30,159 @@ a:hover {
 }
 
 p {
+  color: #666666;
   font-size: 0.9em;
   overflow-wrap: break-word;
   line-height: 1.6em;
 }
 
+
 /* -------- Text -------- */
 
-/* Alejandro */
-
 h1 {
-  font-family: 'DIN', Helvetica, sans-serif;
   font-weight: 600;
   letter-spacing: -0.025em;
-  line-height: 1.5em;
-  margin-bottom: 1.5em;
-  font-size: 1.5em;
+  line-height: 1.2em;
+  font-size: 1.2em;
   margin-left: -0.3em;
-  color: #333;
-}
-
-h1 span {
-  color: #333333;
-}
-
-/* Work Name */
+  color: #444444;
+} /* _ alejandro.wang */
 
 h2 {
-  letter-spacing: 0px;
+  letter-spacing: -0.01em;
   text-align: left;
-  padding-top: 0.4em;
-  color: #333;
+  /* padding-top: 0.4em; */
+  color: #444444;
   font-size: 5em;
   font-weight: 200;
   font-style: italic;
   line-height: 0.98em;
   display: inline-block;
-  cursor: pointer;
-}
-
-h2 span {
-  color: #999999;
-}
-
-/* Work Description */
+} /* Work Name */
 
 h3 {
   letter-spacing: 0px;
-  /* margin-left: 3em; */
   margin-top: 1em;
   color: #999999;
   font-size: 0.8em;
   line-height: 1.5em;
   font-weight: 400;
   text-align: left;
-  max-width: 55%;
-  /* display: none; */
-}
+} /* Work Description */
 
-h3 span {
-  display: inline-block;
-}
 
-/* -------- Container -------- */
+/* -------- Header -------- */
 
-#landing {
+header {
   position: fixed;
-  padding: 6em 0 0 2em;
+  top: 6em;
+  left: 2em;
   z-index: 100;
   height: 100%;
-  /* min-height: 420px; */
 }
 
-#self-intro {
-  padding-top: 6em;
-  margin-bottom: 40vh;
+.word-covered {
+  position: relative;
+  white-space: nowrap;
 }
+
+.word-covered:before  {
+  bottom: 7.5%;
+  content: '';
+  height: 30%;
+  left: 0;
+  opacity: .9;
+  position: absolute;
+  right: 0;
+  /* background: #FB973A; */
+  background: linear-gradient(to right, #FB973A , yellow);
+}
+
+/* -------- Nav -------- */
+
+nav {
+  width: 50%;
+  float: right;
+  top: 6em;
+  margin-bottom: 40vh;
+  position: relative;
+}
+
+nav ul {
+  margin: 0;
+  padding: 0;
+}
+
+nav ul li {
+  list-style-type: none;
+  display: inline-block;
+  padding-right: 0.6em;
+}
+
+nav ul li a {
+  font-size: 1.1em;
+  line-height: 1.2em;
+  letter-spacing: -0.025em;
+  font-weight: 600;
+  border: 0;
+}
+
+nav .active {
+  color: black;
+}
+
+
+/* -------- Container Positioning -------- */
+
+#right-container {
+  width: calc( 50% + 10em );
+  clear: right;
+  float: right;
+  position: relative;
+  padding-right: 2em;
+}
+
+.experience {
+  height: auto;
+  display: block;
+  margin: 2em 0;
+}
+
+.timestamp, .category {
+  font-size: 0.8em;
+  width: 12.5em;
+  float: left;
+  clear: left;
+}
+
+.description {
+  margin-left: 10em;
+  width:  calc( 100% - 10em );
+  height: 100%;
+}
+
+.description p {
+  margin: 0;
+}
+
+hr {
+  margin-left: 10em;
+  width: 0.5em;
+  border: 1px solid black;
+}
+
+
+/* -------- Card Rewrite -------- */
 
 .card {
   background-color: transparent;
   border: 0;
+  padding-bottom: 1em;
+  margin-left: 10em;
+}
+
+.card h2 {
+  cursor: pointer;
 }
 .card-header {
   padding: 0;
@@ -131,48 +197,59 @@ h3 span {
   /* background-color: #E5E5E5; */
 }
 
+
+/* -------- Button Rewrite -------- */
+
+.btn-primary {
+  border: 1px solid #FB973A;
+  background-color: transparent;
+  opacity: 0.8;
+  border-radius: 0;
+  text-decoration: none;
+  padding-left: 15px;
+  padding-right: 15px;
+  color: #FB973A;
+  font-weight: 400;
+}
+
+.btn-primary:hover, .btn-primary:active {
+  border: 1px solid #FB973A;
+  background-color: #FB973A;
+  opacity: 1;
+  color: #ffffff;
+}
+
+
+/* -------- Footer -------- */
+
+footer {
+
+    width: 50%;
+    clear: right;
+    float: right;
+    position: relative;
+  margin: 30vh 0 2.25em 0;
+}
+
+footer>p {
+  color: #aaaaaa;
+  letter-spacing: 1px;
+  font-size: 0.75em;
+}
+
+
+/* -------- Decoration -------- */
+
 .upcoming {
   text-decoration: line-through;
   color: #999;
 }
 
-/* -------- Decoration -------- */
-
-#work-mobile {
-  /* background-image: url("../../images/mobile_nav.png"); */
-  /* border-bottom: 4px solid #222222; */
-}
-
-a:hover #work-mobile {
-  /* background-image: url("../../images/mobile_nav.png"); */
-  /* background-color: #091329; */
-  /* border 2px solid linear-gradient(to right, #278797 10%, #012AFB 95%); */
-  /* box-shadow: 0px 3px #0160C6; */
-  /* #0A71FB; */
-}
-
-#work-smartpill {
-  /* background-image: url("../../images/smartpill_nav.png"); */
-}
-
-#work-inneref {
-  /* background-image: url("../../images/inneref_nav.png"); */
-}
-
-#work-inforest {
-  /* background-image: url("../../images/inforest_nav.png"); */
-}
-
-#decoration_down {
-  position: fixed;
-  bottom: 0;
-}
-
 .background {
-  width: calc((100vw - 4em - 30px)*3/4);
-  height: calc(100vh - 4em);
+  width: calc((100vw - 3.5em - 30px)*3/4);
+  height: calc(100vh - 3.5em);
   position: fixed;
-  left: calc(2em + 15px);
+  left: calc(1.5em + 15px);
   bottom: 0;
   background-image: url("../../images/blank-banner.png");
   background-color: #F4F4F2;
@@ -183,28 +260,13 @@ a:hover #work-mobile {
   transition: background 0.2s linear;
 }
 
-.word-covered {
-  position: relative;
-  white-space: nowrap;
-}
 
-.word-covered:before  {
-  bottom: 10%;
-  content: '';
-  height: 30%;
-  left: 0;
-  opacity: .9;
-  position: absolute;
-  right: 0;
-  background: #FB973A;
-}
-
-.word-highlighted {
+.word-underlined {
   position: relative;
   white-space: pre-line;
 }
 
-.word-highlighted:before  {
+.word-underlined:before  {
   bottom: 0%;
   content: '';
   height: 20px;
@@ -216,78 +278,107 @@ a:hover #work-mobile {
   transition: background 0.2s linear;
 }
 
-
-.word-colored-orange {
-  color: #FB973A;
+#left-decoration {
+  position: fixed;
+  padding-left: 2em;
+  z-index: 100;
+  bottom: 0;
+  margin-bottom: 1.5em;
 }
 
 
+/* -------- Preloader -------- */
 
-/* -------- Footer -------- */
-
-#footer-p {
-  height: 100px;
-  margin-top: 30vh;
-}
-
-#footer-p p {
-  padding-top: 50px;
-  color: #AAAAAA;
-  letter-spacing: 1px;
-  font-size: 12px;
+#preloader-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: #fff;
+  z-index: 1000;
+  height: 100%;
   width: 100%;
-  text-align: right;
-  margin: auto;
-  display: block;
+  overflow: hidden;
 }
 
-/* -------- Mobile -------- */
+.no-js #preloader-container, .oldie #preloader-container {
+  display: none;
+}
+
+#preloader {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  width: 100px;
+  height: 100px;
+  margin-left: -50px;
+  margin-top: -50px;
+  padding: 0;
+  background-color: #aaa;
+  border-radius: 100%;
+  -webkit-animation: scaleout 1.0s infinite ease-in-out;
+  animation: scaleout 1.0s infinite ease-in-out;
+}
+
+@-webkit-keyframes scaleout {
+  0% {
+    -webkit-transform: scale(0);
+  }
+  100% {
+    -webkit-transform: scale(1);
+    opacity: 0;
+  }
+}
+@keyframes scaleout {
+  0% {
+    -webkit-transform: scale(0);
+    transform: scale(0);
+  }
+  100% {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+    opacity: 0;
+  }
+}
+
+
+/* -------- Mobile View Media -------- */
 
 @media (max-width: 768px) {
-  #landing {
+
+  h2 {
+    margin-left: 1.2em;
+    font-size: 3em;
+  }
+
+  #left-top {
     padding: 5em 0 0 1em;
     margin: 0;
     position: inherit;
   }
-  #works {
-    padding: 0;
+
+  #left-bottom {
+    display: none;
   }
-  #self-intro {
+
+  #right-top {
     margin: 0 0 30vh 3em;
     padding-top: 2em;
-  }
-  .work-card {
-    margin-bottom: 1em;
   }
 
   .card-body {
     margin-left: 6em;
   }
 
-  h1 {
-    margin-bottom: 0;
-  }
-  h2 {
-    margin-left: 1.2em;
-    font-size: 3em;
-  }
-  p {
-    color: #333333;
-
-  }
   .background {
     width: calc(100% - 1em - 15px);
     height: 100%;
     left: calc(1em + 15px);
     opacity: 0.3;
   }
-  .decoration_down {
-    visibility: hidden;
-  }
-  #worklist {
 
-  }
-  #footer-p {
+  #footer {
     margin-left: 3em;
   }
 }
