--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5,6 +5,11 @@
   -webkit-font-smoothing: antialiased;
 }
 
+html, body {
+  min-height: 100vh;
+  overflow: scroll;
+}
+
 body {
   padding: 0px;
   margin: 0px;
@@ -24,7 +29,7 @@ a {
   transition: color 0.3s;
 }
 
-a:hover {
+a:hover, footer a:hover svg path {
   color: #FB973A;
   text-decoration: none;
 }
@@ -36,6 +41,9 @@ p {
   line-height: 1.6em;
 }
 
+[tabindex] {
+  outline: none !important;
+}
 
 /* -------- Text -------- */
 
@@ -44,9 +52,13 @@ h1 {
   letter-spacing: -0.025em;
   line-height: 1.2em;
   font-size: 1.2em;
-  margin-left: -0.3em;
+  margin-left: -0.8em;
   color: #444444;
-} /* _ alejandro.wang */
+  display: inline-block;
+  white-space: nowrap;
+}
+
+/* _ alejandro.wang */
 
 h2 {
   letter-spacing: -0.01em;
@@ -56,9 +68,11 @@ h2 {
   font-size: 5em;
   font-weight: 200;
   font-style: italic;
-  line-height: 0.98em;
+  line-height: 1.1em;
   display: inline-block;
-} /* Work Name */
+}
+
+/* Work Name */
 
 h3 {
   letter-spacing: 0px;
@@ -68,17 +82,21 @@ h3 {
   line-height: 1.5em;
   font-weight: 400;
   text-align: left;
-} /* Work Description */
+}
 
+@media (max-width: 768px) {
+  h2 {
+    font-size: 3em;
+  }
+}
 
 /* -------- Header -------- */
 
 header {
   position: fixed;
-  top: 6em;
-  left: 2em;
+  padding: 6em 0 0 3em;
   z-index: 100;
-  height: 100%;
+  transition: all 0.5s ease;
 }
 
 .word-covered {
@@ -86,7 +104,7 @@ header {
   white-space: nowrap;
 }
 
-.word-covered:before  {
+.word-covered:before {
   bottom: 7.5%;
   content: '';
   height: 30%;
@@ -95,15 +113,23 @@ header {
   position: absolute;
   right: 0;
   /* background: #FB973A; */
-  background: linear-gradient(to right, #FB973A , yellow);
+  background: linear-gradient(to right, #FB973A, yellow);
+}
+
+@media (max-width: 768px) {
+  header {
+    position: relative;
+    margin-bottom: 5em;
+    width: 100%;
+  }
 }
 
 /* -------- Nav -------- */
 
 nav {
   width: 50%;
-  float: right;
-  top: 6em;
+  left: 50%;
+  padding-top: 6em;
   margin-bottom: 40vh;
   position: relative;
 }
@@ -131,15 +157,74 @@ nav .active {
   color: black;
 }
 
+#sidenav {
+  height: 100%;
+  width: 0;
+  position: fixed;
+  top: 0;
+  left: 0;
+  padding-left: 2em;
+  padding-top: 6em;
+  background-color: white;
+  transition: all 0.5s ease;
+  overflow-x: hidden;
+  z-index: 1000;
+  margin-top: 0;
+}
+
+#sidenav li {
+  padding: 0.3em 0;
+  display: block;
+}
+
+#sidenav a {
+  font-size: 1.5em;
+  line-height: 1.5em;
+}
+
+#sidenav-trigger {
+  float: right;
+  margin-right: 2em;
+  display: none;
+}
+
+#sidenav-close {
+  margin-bottom: 2em;
+}
+
+@media (max-width: 1200px) {
+  nav {
+    left: 35%;
+  }
+}
+
+@media (max-width: 768px) {
+  nav {
+    display: none;
+  }
+  #sidenav {
+    display: block;
+  }
+  #sidenav-trigger {
+    display: block;
+  }
+
+}
 
 /* -------- Container Positioning -------- */
+.content {
+  min-height: 100vh;
+  margin-bottom: -3em;
+}
+
 
 #right-container {
-  width: calc( 50% + 10em );
-  clear: right;
-  float: right;
+  width: calc(50% + 10em);
+  left: calc(50% - 10em);
   position: relative;
   padding-right: 2em;
+  margin-bottom: 4em;
+  transition: all 0.5s ease;
 }
 
 .experience {
@@ -153,11 +238,12 @@ nav .active {
   width: 12.5em;
   float: left;
   clear: left;
+  padding: 0.5em 0;
 }
 
 .description {
   margin-left: 10em;
-  width:  calc( 100% - 10em );
+  width: calc( 100% - 10em);
   height: 100%;
 }
 
@@ -171,6 +257,48 @@ hr {
   border: 1px solid black;
 }
 
+@media (max-width: 1200px) {
+  #right-container {
+    width: calc(65% + 8em);
+    left: calc(35% - 8em);
+  }
+  .timestamp, .category {
+    width: 10em;
+  }
+
+  .description {
+    margin-left: 8em;
+    width: calc( 100% - 8em);
+  }
+  hr {
+    margin-left: 8em;
+  }
+}
+
+@media (max-width: 768px) {
+  .content {
+    min-height: auto;
+  }
+  #right-container {
+    width: 100%;
+    left: auto;
+    padding-left: 3em;
+  }
+  .timestamp, .category {
+    width: auto;
+    float: none;
+  }
+  .description {
+    margin-left: 0;
+    width: auto;
+  }
+  hr {
+    margin-left: 0em;
+    border: 0.5px solid grey;
+  }
+}
+
+
 
 /* -------- Card Rewrite -------- */
 
@@ -179,11 +307,13 @@ hr {
   border: 0;
   padding-bottom: 1em;
   margin-left: 10em;
+  position: relative;
 }
 
-.card h2 {
+.card-header>h2 {
   cursor: pointer;
 }
+
 .card-header {
   padding: 0;
   background-color: transparent;
@@ -193,11 +323,24 @@ hr {
 .card-body {
   padding: 1em 3em 1em 0;
   margin-left: 3em;
-  margin-bottom: 2em;
+  margin-bottom: 5em;
   /* background-color: #E5E5E5; */
 }
 
-
+@media (max-width: 1200px) {
+  .card {
+    margin-left: 8em;
+  }
+}
+@media (max-width: 768px) {
+  .card {
+    margin-left: 0;
+  }
+  .card-body {
+    margin-left: 1em;
+    padding-right: 1em;
+  }
+}
 /* -------- Button Rewrite -------- */
 
 .btn-primary {
@@ -219,54 +362,90 @@ hr {
   color: #ffffff;
 }
 
-
 /* -------- Footer -------- */
 
-footer {
+.push {
+  height: 50px;
+}
 
-    width: 50%;
-    clear: right;
-    float: right;
-    position: relative;
-  margin: 30vh 0 2.25em 0;
+footer {
+  width: 50%;
+  height: 3em;
+  left: 50%;
+  font-size: 0.85em;
+  transition: all 0.5s ease;
+  position: relative;
 }
 
 footer>p {
   color: #aaaaaa;
   letter-spacing: 1px;
-  font-size: 0.75em;
+  display: inline-block;
 }
+
+footer>a {
+  border: 0;
+  padding: 0 0.2em;
+  opacity: 0.4;
+}
+
+@media (max-width: 1200px) {
+  footer {
+    left: 35%;
+  }
+}
+
+@media (max-width: 768px) {
+  footer {
+    width: 100%;
+    left: auto;
+    bottom: auto;
+    margin: 2em 0 3em 3em;
+    font-size: 1em;
+  }
+  footer>a {
+    padding: 0 0.4em;
+  }
+}
+
 
 
 /* -------- Decoration -------- */
-
-.upcoming {
-  text-decoration: line-through;
-  color: #999;
-}
 
 .background {
   width: calc((100vw - 3.5em - 30px)*3/4);
   height: calc(100vh - 3.5em);
   position: fixed;
   left: calc(1.5em + 15px);
-  bottom: 0;
+  top: 3.5em;
   background-image: url("../../images/blank-banner.png");
-  background-color: #F4F4F2;
+  background-color: rgba(0,0,0,0.05);
   background-repeat: no-repeat;
   background-position: center center;
   background-size: contain;
   display: none;
-  transition: background 0.2s linear;
+  transition: all 0.2s linear;
 }
 
+.background.about {
+  background-image: url("../../images/about-banner.png");
+}
+
+.upcoming {
+  text-decoration: line-through;
+  color: #999;
+}
+
+.card-header>h2:hover, .card-header>h2:hover sup, .card-header>h2:focus, .card-header>h2:focus sup {
+  color: #FB973A;
+}
 
 .word-underlined {
   position: relative;
   white-space: pre-line;
 }
 
-.word-underlined:before  {
+.word-underlined:before {
   bottom: 0%;
   content: '';
   height: 20px;
@@ -275,18 +454,42 @@ footer>p {
   position: absolute;
   right: 0;
   background: #FB973A;
-  transition: background 0.2s linear;
+  -webkit-transition: all 0.3s linear;
+  -moz-transition: all 0.3s linear;
+  -ms-transition: all 0.3s linear;
+  -o-transition: all 0.3s linear;
+  transition: all 0.3s linear;
 }
 
 #left-decoration {
   position: fixed;
-  padding-left: 2em;
+  margin-left: 3em;
   z-index: 100;
   bottom: 0;
   margin-bottom: 1.5em;
 }
 
+@media (max-width: 1200px) {
+  .background {
+    height: 60vh;
+    background-color: rgba(0,0,0,0.067);
+    opacity: 0.75;
+  }
+}
 
+@media (max-width: 768px) {
+  .background {
+    width: calc(100% - 0.5em - 15px);
+    height: 100%;
+    left: calc(0.5em + 15px);
+    top: auto;
+    background-color: rgba(0,0,0,0.167);
+    opacity: 0.3;
+  }
+  #left-decoration {
+    display: none;
+  }
+}
 /* -------- Preloader -------- */
 
 #preloader-container {
@@ -330,6 +533,7 @@ footer>p {
     opacity: 0;
   }
 }
+
 @keyframes scaleout {
   0% {
     -webkit-transform: scale(0);
@@ -342,46 +546,8 @@ footer>p {
   }
 }
 
-
 /* -------- Mobile View Media -------- */
 
-@media (max-width: 768px) {
-
-  h2 {
-    margin-left: 1.2em;
-    font-size: 3em;
-  }
-
-  #left-top {
-    padding: 5em 0 0 1em;
-    margin: 0;
-    position: inherit;
-  }
-
-  #left-bottom {
-    display: none;
-  }
-
-  #right-top {
-    margin: 0 0 30vh 3em;
-    padding-top: 2em;
-  }
-
-  .card-body {
-    margin-left: 6em;
-  }
-
-  .background {
-    width: calc(100% - 1em - 15px);
-    height: 100%;
-    left: calc(1em + 15px);
-    opacity: 0.3;
-  }
-
-  #footer {
-    margin-left: 3em;
-  }
-}
 
 @media (min-width: 1200px) {
   .work-card {
