--- a/assets/css/works.css
+++ b/assets/css/works.css
@@ -476,7 +476,7 @@ footer>a:hover {
   left: 0;
   right: 0;
   bottom: 0;
-  background: #fff;
+  background: #000;
   z-index: 1000;
   height: 100%;
   width: 100%;
@@ -496,7 +496,7 @@ footer>a:hover {
   margin-left: -50px;
   margin-top: -50px;
   padding: 0;
-  background-color: #aaa;
+  background-color: #333;
   border-radius: 100%;
   -webkit-animation: scaleout 1.0s infinite ease-in-out;
   animation: scaleout 1.0s infinite ease-in-out;
